@@ -32,5 +32,6 @@ GC_NEVER(wxFrame);
 %import "include/wxObject.h"
 %import "include/wxEvtHandler.h"
 %import "include/wxWindow.h"
+%import "include/wxTopLevelWindow.h"
 
 %include "include/wxFrame.h"
