@@ -95,7 +95,7 @@ $parents = {
     'wxFontData' => 'wxObject',
     'wxFontDialog' => 'wxDialog',
     'wxFontList' => 'wxList',
-    'wxFrame' => 'wxWindow',
+    'wxFrame' => 'wxTopLevelWindow',
     'wxGDIObject' => 'wxObject',
     'wxGLCanvas' => 'wxWindow',
     'wxGauge' => 'wxControl',
@@ -183,7 +183,7 @@ $parents = {
     'wxMemoryInputStream' => 'wxInputStream',
     'wxMemoryOutputStream' => 'wxOutputStream',
     'wxMenu' => 'wxEvtHandler',
-    'wxMenuBar' => 'wxEvtHandler',
+    'wxMenuBar' => 'wxWindow',
     'wxMenuEvent' => 'wxEvent',
     'wxMenuItem' => 'wxObject',
     'wxMessageDialog' => 'wxDialog',
@@ -285,6 +285,7 @@ $parents = {
     'wxToggleButton' => 'wxControl',
     'wxToolBar' => 'wxControl',
     'wxToolTip' => 'wxObject',
+	'wxTopLevelWindow' => 'wxWindow',
     'wxTreeCtrl' => 'wxControl',
     'wxTreeEvent' => 'wxNotifyEvent',
     'wxTreeItemData' => 'wxClientData',
